# tensor_optim

./: Cargo.toml  README.md
src/: lib.rs
src/internal/: array.rs  dynamic.rs  mod.rs  views.rs
src/internal/dynamic/: mod.rs
tests/: map_zip_or_not.rs  matmul.rs  transpose.rs
