[package]
name = "tensor_optim"
version = "0.1.0"
edition = "2024"
rust-version = "1.88.0"
description = "A tiny autodiff + tensor engine that doesn't compromise on flexibility"
license = "MIT"
documentation = "https://docs.rs/tensor_optim"
keywords = ["tensor", "machine-learning", "scienctific-compute", "memory-efficient"]
categories = ["science", "mathematics", "data-structures", "embedded", "no-std::no-alloc"]
repository = "https://github.com/bobbothe2nd/tensor_optim"
readme = "README.md"

[features]
default = []
alloc = []

[dev-dependencies]
rand = "0.9.2"
proptest = "1.7.0"
