[package]
name = "tensor_optim"
version = "0.2.1"
edition = "2021"
rust-version = "1.83.0"
description = "A tiny tensor engine lacking compromise on portability"
license = "MIT"
documentation = "https://docs.rs/tensor_optim"
keywords = ["tensor", "machine-learning", "scienctific-compute", "memory-efficient"]
categories = ["science", "mathematics", "data-structures", "embedded", "no-std::no-alloc"]
repository = "https://github.com/bobbothe2nd/tensor_optim"
readme = "README.md"

[profile.release]
opt-level = 3
codegen-units = 1
incremental = true
debug = false

[profile.release.package."*"]
opt-level = 3
codegen-units = 1

[features]
alloc = []

[dependencies]
lazy_simd = "0.1.1"

[dev-dependencies]
proptest = "1.7.0"

[[test]]
name = "transpose"
required-features = [
    "alloc",
]

[[test]]
name = "map_zip_or_not"
required-features = [
    "alloc",
]
